Adding week 8 presentation

--- a/Tiles/app/src/main/AndroidManifest.xml
+++ b/Tiles/app/src/main/AndroidManifest.xml
@@ -21,5 +21,6 @@
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"></activity>
     </application>
-
+8-9 deploy
+    5-7 qa
 </manifest>
